Add tests, and modified about, help and home pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,14 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Home") %>
+<!DOCTYPE html>
+<html>
+<head>
+<title><%= yield(:title) %> | Twitty</title>
+</head>
+<body>
+<h1>Twitty</h1>
+<p>
+Help page for twitty
+</p>
+</body>
+<footer>Made by <a href="https://github.com/alvarorf">Álvaro Andrés</a></footer>
+</html>
