--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -7,7 +7,7 @@
 <body>
 <h1>Twitty</h1>
 <p>
-Home page for twitty
+About page for twitty
 </p>
 </body>
 <footer>Made by <a href="https://github.com/alvarorf">Álvaro Andrés</a></footer>
