Modify about, help and home pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,14 +1,6 @@
-<% provide(:title, "Home") %>
-<!DOCTYPE html>
-<html>
-<head>
-<title><%= yield(:title) %> | Twitty</title>
-</head>
-<body>
+<% provide(:title, "About") %>
 <h1>Twitty</h1>
 <p>
 About page for twitty
 </p>
-</body>
-<footer>Made by <a href="https://github.com/alvarorf">Álvaro Andrés</a></footer>
-</html>
+
