--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Twitty</title>
+  <title><%= yield(:title) %> | Twitty </title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -13,4 +13,5 @@
   <body>
     <%= yield %>
   </body>
+  <footer>Made by <a href="https://github.com/alvarorf">Álvaro Andrés</a></footer>
 </html>
