--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,14 +1,5 @@
-<% provide(:title, "Home") %>
-<!DOCTYPE html>
-<html>
-<head>
-<title><%= yield(:title) %> | Twitty</title>
-</head>
-<body>
+<% provide(:title, "Help") %>
 <h1>Twitty</h1>
 <p>
 Help page for twitty
 </p>
-</body>
-<footer>Made by <a href="https://github.com/alvarorf">Álvaro Andrés</a></footer>
-</html>
