--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,8 +2,8 @@
 <small>Made by <a href="https://github.com/alvarorf">Álvaro Andrés</a></small>
 <nav>
   <ul>
-  <li><%= link_to "About", '#' %></li>
-  <li><%= link_to "Contact", '#' %></li>
+  <li><%= link_to "About", about_path %></li>
+  <li><%= link_to "Contact", contact_path %></li>
   </ul>
 </nav>
 </footer>
