--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -43,6 +43,10 @@ p {
 }
 
 /* header */
+.nav-link {
+  color: #eaeaea;
+}
+
 #logo {
   float: left;
   margin-right: 10px;
@@ -55,7 +59,7 @@ p {
 }
 
 #logo:hover {
-  color: white;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -95,4 +99,15 @@ footer ul li {
 
 .center h1 {
   margin-bottom: 10px;
+}
+
+/* miscellaneous */
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
