--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,13 @@
     </script>
   <![endif]-->
   <body>
-    <%= render 'layouts/header' %>
     <div class="container">
+      <%= render 'layouts/header' %>
       <%= yield %>
+      <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
 
   </body>
-  <%= render 'layouts/footer' %>
+
 </html>
